<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardview_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/routine_item"
        android:layout_width="370dp"
        android:layout_height="150dp"
        android:layout_margin="3dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- Use Horizontal LinearLayout -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:padding="5dp"
            android:layout_margin="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Left side text content -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/routineName"
                    style="@style/SmallDynamicContainerStyle"
                    android:text="@string/routine_name"
                    android:textAllCaps="true" />

                <TextView
                    android:id="@+id/routineDescription"
                    style="@style/DescriptionDynamic"
                    android:text="@string/workout_description" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/exerciseCount"
                        style="@style/SubDynamicContainerStyleText"
                        android:layout_marginEnd="2dp"
                        android:text="@string/workout_count" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/duration"
                        style="@style/SubDynamicContainerStyleText"
                        android:text="@string/workout_duration" />

                    <TextView
                        android:id="@+id/difficulty"
                        style="@style/SubDynamicContainerStyleText"
                        android:layout_weight="1"
                        android:text="@string/workout_difficulty"
                        android:textAllCaps="true" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>