<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.home.MainActivity">

    <!-- Guideline -->

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentContainerView"
        android:name="com.livado.workout.ui.main.home.HomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="75dp" />

    <ImageView
        android:id="@+id/top_navbar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:contentDescription="@string/top_navbar_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_navbar" />

    <TextView
        android:id="@+id/titleText"
        style="@style/TitleBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nufit_text"
        app:layout_constraintBottom_toBottomOf="@+id/profileButton"
        app:layout_constraintEnd_toStartOf="@+id/profileButton"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/profileButton" />

    <ImageButton
        android:id="@+id/profileButton"
        android:layout_width="@dimen/button_size"
        android:layout_height="@dimen/button_size"
        android:backgroundTint="#343F89"
        android:contentDescription="@string/profile_button_description"
        android:onClick="setupProfileButton"
        app:layout_constraintBottom_toBottomOf="@+id/top_navbar"
        app:layout_constraintEnd_toEndOf="@+id/top_navbar"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="@+id/top_navbar"
        app:layout_constraintTop_toTopOf="@+id/top_navbar"
        app:srcCompat="@drawable/profile" />

</androidx.constraintlayout.widget.ConstraintLayout>