<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_workout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.profile.ProfileActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:backgroundTint="#343F89"
            android:contentDescription="@string/back_button_description"
            android:onClick="setupBackButton"
            android:layout_gravity="start"
            android:layout_marginStart="15dp"
            app:srcCompat="@drawable/back_arrow" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="2" />

        <ImageButton
            android:id="@+id/exitButton"
            android:layout_width="@dimen/button_size"
            android:layout_height="@dimen/button_size"
            android:backgroundTint="#343F89"
            android:contentDescription="@string/back_button_description"
            android:onClick="setupExitButton"
            android:layout_gravity="start"
            android:layout_marginEnd="15dp"
            app:srcCompat="@drawable/exit_button" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/changePhotoButton"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:backgroundTint="#343F89"
        android:layout_marginTop="50dp"
        android:background="@drawable/photo_background"
        app:srcCompat="@drawable/change_photo" />

    <EditText
        style="@style/ProfileField"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:id="@+id/fullNameField"
        android:hint="Juan Dela Cruz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        style="@style/ProfileField"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:id="@+id/usernameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        style="@style/EmailField"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:id="@+id/emailField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/genderSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:orientation="horizontal">

        <EditText
            style="@style/SmallField"
            android:id="@+id/weightField"
            android:hint="@string/weight_text"
            android:layout_marginEnd="40dp"/>

        <EditText
            style="@style/SmallField"
            android:hint="@string/height_text"
            android:id="@+id/heightField" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/continueButton"
            style="@style/ProfileButton"
            android:layout_weight="1"
            android:text="@string/continue_text" />

    </LinearLayout>


</LinearLayout>